--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "wishgranter",
   "version": "1.0.1b",
   "description": "A discord bot for a specified discord guild. S.T.A.L.K.E.R.",
-  "main": "bot.js",
+  "main": "dist/client.js",
   "scripts": {
-    "start": "node bot.js"
+    "build": "tsc",
+    "dev": "node --enable-source-maps --trace-warnings dist/client.js ",
+    "start": "node --enable-source-maps dist/client.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -15,15 +18,26 @@
     "wish",
     "granter",
     "bot",
-    "stalker"
+    "typescript"
   ],
-  "author": "CsiPA",
+  "author": "Péter András 'CsiPA' Csizmadia",
   "license": "ISC",
   "homepage": "https://bitbucket.org/CsiPA0723/wishgranter#readme",
   "dependencies": {
-    "better-sqlite3": "^5.4.3",
+    "canvas": "^2.6.1",
     "colors": "^1.4.0",
     "dateformat": "^3.0.3",
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.5.1",
+    "got": "^11.8.1",
+    "mariadb": "^2.5.2",
+    "mathjs": "^8.1.0",
+    "moment": "^2.29.1",
+    "quickchart-js": "^1.0.5"
+  },
+  "devDependencies": {
+    "@types/chart.js": "^2.9.28",
+    "@types/mathjs": "^6.0.9",
+    "@types/node": "^14.14.13",
+    "typescript": "^4.1.3"
   }
 }
