added economy channel

--- a/src/settings.json
+++ b/src/settings.json
@@ -1,6 +1,7 @@
 {
     "Prefix": ">",
     "Channels": {
-        "modLogId": "693080450406678528"
+        "modLogId": "693080450406678528",
+        "economyLogId": "693080450406678528"
     }
 }
