--- a/src/settings.json
+++ b/src/settings.json
@@ -1,5 +1,5 @@
 {
-    "Prefix": ">",
+    "Prefix": "%",
     "Channels": {
         "modLogId": "693080450406678528",
         "economyLogId": "693080450406678528"
