--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wishgranter",
-  "version": "1.0.1b",
+  "version": "2.0",
   "description": "A discord bot for a specified discord guild. S.T.A.L.K.E.R.",
   "main": "dist/client.js",
   "scripts": {
